--- a/web/package.json
+++ b/web/package.json
@@ -10,17 +10,25 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.3",
     "bootstrap": "^5.3.2",
+    "cross-env": "^7.0.3",
+    "crypto-browserify": "^3.12.0",
+    "leaflet": "^1.9.4",
+    "mapbox-gl": "^3.0.1",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "cross-env REACT_APP_MAPBOX_TOKEN=pk.eyJ1IjoiaGltYW50aGExMTY4MSIsImEiOiJjbHFzOTNpOW8xcm9pMnFzYjlkZDM2NjNuIn0.dfqTn4zFadOj8Vzw-JwpYg react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
