--- a/web/package.json
+++ b/web/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.2",
     "@mui/icons-material": "^5.15.2",
     "@mui/material": "^5.15.2",
     "@testing-library/jest-dom": "^5.17.0",
@@ -16,6 +17,7 @@
     "crypto-browserify": "^3.12.0",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.0.1",
+    "mapbox-gl-geocoder": "^2.0.1",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
