--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ server/.env
 # Ignore React Web Frontend
 web/node_modules
 web/build
+web/.env
 web/src/components/Location.js
 
 # Ignore React Native Mobile App
