--- a/web/package.json
+++ b/web/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/dayjs": "^3.0.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mapbox/mapbox-gl-geocoder": "^5.0.2",
     "@mui/icons-material": "^5.15.2",
     "@mui/material": "^5.15.2",
+    "@mui/x-date-pickers": "^6.19.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +17,7 @@
     "bootstrap": "^5.3.2",
     "cross-env": "^7.0.3",
     "crypto-browserify": "^3.12.0",
+    "dayjs": "^1.11.10",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.0.1",
     "mapbox-gl-geocoder": "^2.0.1",
