--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/core": "^6.4.10",
+    "@react-navigation/drawer": "^6.6.6",
+    "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
@@ -19,8 +21,12 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
-    "react-native-gesture-handler": "^2.14.1",
-    "react-native-safe-area-context": "^4.8.2",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-pager-view": "6.2.3",
+    "react-native-reanimated": "^3.6.1",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-tab-view": "^3.5.2",
     "react-navigation": "^5.0.0",
     "react-navigation-stack": "^2.10.4"
   },
