--- a/web/package.json
+++ b/web/package.json
@@ -10,12 +10,14 @@
     "@mui/icons-material": "^5.15.2",
     "@mui/lab": "^5.0.0-alpha.160",
     "@mui/material": "^5.15.2",
+    "@mui/x-charts": "^6.19.1",
     "@mui/x-date-pickers": "^6.19.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.3",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.1",
     "cross-env": "^7.0.3",
     "crypto-browserify": "^3.12.0",
     "dayjs": "^1.11.10",
@@ -26,11 +28,13 @@
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.10.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
