--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.0",
     "@expo/webpack-config": "~19.0.1",
     "@react-native-masked-view/masked-view": "0.3.0",
     "@react-navigation/material-top-tabs": "^6.6.5",
@@ -16,16 +17,21 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "expo": "~50.0.3",
+    "expo-font": "^11.10.2",
+    "expo-splash-screen": "0.26.4",
     "expo-status-bar": "~1.11.1",
+    "expo-vector-icons": "10.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-image-slider-box": "^2.0.7",
+    "react-native-ionicons": "^4.6.5",
+    "react-native-pager-view": "6.2.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-tab-view": "^3.5.2",
-    "react-native-web": "~0.19.6",
-    "react-native-pager-view": "6.2.3"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
