--- a/mobile/package.json
+++ b/mobile/package.json
@@ -24,9 +24,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-ionicons": "^4.6.5",
+    "react-native-maps": "^1.10.0",
     "react-native-pager-view": "6.2.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
