--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,18 +10,24 @@
   },
   "dependencies": {
     "@expo/webpack-config": "~19.0.1",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-masked-view/masked-view": "0.3.0",
     "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "expo": "~50.0.3",
+    "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
+    "expo-vector-icons": "^10.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-maps": "^1.10.0",
     "react-native-pager-view": "6.2.3",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-tab-view": "^3.5.2",
