--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^6.3.20",
     "expo": "~50.0.3",
     "expo-image-picker": "~14.7.1",
+    "expo-location": "~16.5.2",
     "expo-status-bar": "~1.11.1",
     "expo-vector-icons": "^10.0.1",
     "react": "18.2.0",
@@ -25,7 +26,7 @@
     "react-native": "0.73.2",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.14.0",
-    "react-native-maps": "^1.10.0",
+    "react-native-maps": "1.8.0",
     "react-native-pager-view": "6.2.3",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^4.8.2",
