--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "~19.0.1",
+    "@react-native-community/datetimepicker": "^7.6.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/viewpager": "^5.0.11",
     "@react-native-masked-view/masked-view": "0.3.0",
