--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "cross-env": "^7.0.3",
     "crypto-browserify": "^3.12.0",
     "dayjs": "^1.11.10",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.0.1",
     "mapbox-gl-geocoder": "^2.0.1",
