--- a/web/package.json
+++ b/web/package.json
@@ -9,7 +9,7 @@
     "@mapbox/mapbox-gl-geocoder": "^5.0.2",
     "@mui/icons-material": "^5.15.2",
     "@mui/lab": "^5.0.0-alpha.160",
-    "@mui/material": "^5.15.6",
+    "@mui/material": "^5.15.7",
     "@mui/x-charts": "^6.19.1",
     "@mui/x-date-pickers": "^6.19.2",
     "@testing-library/jest-dom": "^5.17.0",
@@ -32,6 +32,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-leaflet": "^4.2.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.10.4",
