--- a/mobile/package.json
+++ b/mobile/package.json
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-dotenv": "^3.4.10",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-maps": "1.8.0",
