--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,7 +20,7 @@
     "@react-navigation/stack": "^6.3.20",
     "expo": "~50.0.3",
     "expo-image-picker": "~14.7.1",
-    "expo-location": "~16.5.2",
+    "expo-location": "~16.5.3",
     "expo-status-bar": "~1.11.1",
     "expo-vector-icons": "^10.0.1",
     "react": "18.2.0",
@@ -36,7 +36,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
