--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express-fileupload": "^1.4.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
+    "socket.io": "^4.7.4",
     "validator": "^13.11.0"
   }
 }
