--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
     "cross-env": "^7.0.3",
+    "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.0",
     "dayjs": "^1.11.10",
     "fs-extra": "^11.2.0",
