--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,8 +19,10 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "expo": "~50.0.3",
+    "expo-font": "~11.10.3",
     "expo-image-picker": "~14.7.1",
     "expo-location": "~16.5.3",
+    "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-vector-icons": "^10.0.1",
     "react": "18.2.0",
