--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
+    "@rnmapbox/maps": "^10.1.13",
     "expo": "~50.0.3",
     "expo-font": "~11.10.3",
     "expo-image-picker": "~14.7.1",
