--- a/web/package.json
+++ b/web/package.json
@@ -33,7 +33,9 @@
     "react-bootstrap": "^2.10.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^5.0.5",
     "react-icons": "^4.12.0",
+    "react-image-crop": "^11.0.5",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
