--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,7 +16,7 @@
     "@react-native-mapbox-gl/maps": "^8.6.0-beta.0",
     "@react-native-masked-view/masked-view": "0.3.0",
     "@react-navigation/material-top-tabs": "^6.6.5",
-    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "@rnmapbox/maps": "^10.1.13",
@@ -27,13 +27,13 @@
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-vector-icons": "^10.0.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
     "react-native-dotenv": "^3.4.10",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.14.0",
-    "react-native-maps": "1.8.0",
+    "react-native-maps": "^1.8.0",
     "react-native-pager-view": "6.2.3",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^4.8.2",
