--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "~19.0.1",
+    "@react-native-async-storage/async-storage": "^1.22.2",
     "@react-native-community/datetimepicker": "^7.6.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/viewpager": "^5.0.11",
@@ -20,6 +21,7 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "@rnmapbox/maps": "^10.1.13",
+    "axios": "^1.6.7",
     "expo": "~50.0.3",
     "expo-font": "~11.10.3",
     "expo-image-picker": "~14.7.1",
@@ -27,6 +29,7 @@
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-vector-icons": "^10.0.1",
+    "fetch": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
