--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.22.2",
     "@react-native-community/datetimepicker": "^7.6.2",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "^11.3.0",
     "@react-native-community/viewpager": "^5.0.11",
     "@react-native-mapbox-gl/maps": "^8.6.0-beta.0",
     "@react-native-masked-view/masked-view": "0.3.0",
