--- a/mobile/package.json
+++ b/mobile/package.json
@@ -37,6 +37,8 @@
     "react-native-dotenv": "^3.4.10",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-image-crop-picker": "^0.40.3",
+    "react-native-image-picker": "^7.1.2",
     "react-native-maps": "^1.8.0",
     "react-native-pager-view": "6.2.3",
     "react-native-reanimated": "~3.6.2",
